[gd_scene load_steps=13 format=3 uid="uid://bhvtms0c52igc"]

[ext_resource type="Script" path="res://src/NodeViewer.gd" id="1_g7wbb"]
[ext_resource type="Script" path="res://src/DemoViewer.gd" id="1_o5ptc"]
[ext_resource type="Texture2D" uid="uid://dq7u67nfmm3a7" path="res://assets/outside_0.jpg" id="1_uli44"]
[ext_resource type="Script" path="res://src/TeleportAuthor.gd" id="1_vmn6e"]
[ext_resource type="Script" path="res://src/TeleportAuthorUI.gd" id="2_edhfa"]
[ext_resource type="Script" path="res://src/Camera.gd" id="2_kdwmv"]
[ext_resource type="PackedScene" uid="uid://c6217bo4dts2i" path="res://src/Teleporter.tscn" id="3_ajf81"]
[ext_resource type="Script" path="res://src/events/EventFlagsUI.gd" id="8_ebub3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_82jvv"]
albedo_texture = ExtResource("1_uli44")

[sub_resource type="SphereMesh" id="SphereMesh_7kg3k"]
material = SubResource("StandardMaterial3D_82jvv")
flip_faces = true
radius = 5.0
height = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gfaeb"]
albedo_color = Color(1, 0.341176, 0.290196, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_4apla"]
material = SubResource("StandardMaterial3D_gfaeb")
height = 0.01

[node name="Main" type="Node"]

[node name="DemoViewer" type="Node3D" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource("1_o5ptc")

[node name="Bubble" type="MeshInstance3D" parent="DemoViewer"]
mesh = SubResource("SphereMesh_7kg3k")

[node name="Camera3D" type="Camera3D" parent="DemoViewer/Bubble"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 0, 0)
current = true

[node name="OmniLight3D" type="OmniLight3D" parent="DemoViewer/Bubble"]
omni_range = 7.0
omni_attenuation = 1e-05

[node name="Teleporters" type="Node3D" parent="DemoViewer/Bubble"]

[node name="NodeViewer" type="Node3D" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource("1_g7wbb")

[node name="Bubble" type="MeshInstance3D" parent="NodeViewer"]
mesh = SubResource("SphereMesh_7kg3k")

[node name="Camera3D" type="Camera3D" parent="NodeViewer/Bubble"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, -1, 0, 0, 0)
current = true

[node name="TeleporterIndicatorAnchor" type="Node3D" parent="NodeViewer/Bubble/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.986286, 0.165048, 0, -0.165048, 0.986286, 0, 0, 0)

[node name="TeleporterIndicator" parent="NodeViewer/Bubble/Camera3D/TeleporterIndicatorAnchor" instance=ExtResource("3_ajf81")]

[node name="MeshInstance3D" parent="NodeViewer/Bubble/Camera3D/TeleporterIndicatorAnchor/TeleporterIndicator/CollisionShape3D" index="0"]
mesh = SubResource("CylinderMesh_4apla")

[node name="OmniLight3D" type="OmniLight3D" parent="NodeViewer/Bubble"]
omni_range = 7.0
omni_attenuation = 1e-05

[node name="Teleporters" type="Node3D" parent="NodeViewer/Bubble"]

[node name="TeleportAuthor" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_vmn6e")

[node name="TeleportNodes" type="Node2D" parent="TeleportAuthor"]
unique_name_in_owner = true

[node name="EventAuthor" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_kdwmv")

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="TeleportAuthorUI" type="Control" parent="Camera2D/CanvasLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_edhfa")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="TopUI" type="MarginContainer" parent="Camera2D/CanvasLayer/TeleportAuthorUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 46.0
grow_horizontal = 2
theme_override_constants/margin_top = 20

[node name="CenterContainer" type="CenterContainer" parent="Camera2D/CanvasLayer/TeleportAuthorUI/TopUI"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer/TeleportAuthorUI/TopUI/CenterContainer"]
layout_mode = 2

[node name="ProjectTitle" type="Label" parent="Camera2D/CanvasLayer/TeleportAuthorUI/TopUI/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Untitled Project"
horizontal_alignment = 1

[node name="Demo" type="Button" parent="Camera2D/CanvasLayer/TeleportAuthorUI/TopUI/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "DEMO"

[node name="LeftUI" type="MarginContainer" parent="Camera2D/CanvasLayer/TeleportAuthorUI"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 2.0
offset_right = 277.0
offset_bottom = -526.0
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer/TeleportAuthorUI/LeftUI"]
layout_mode = 2

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/TeleportAuthorUI/LeftUI/VBoxContainer"]
layout_mode = 2
text = "WASD - move around
Scroll - zoom
Left Click - drag node
Right Click - action"

[node name="EntityList" type="VBoxContainer" parent="Camera2D/CanvasLayer/TeleportAuthorUI/LeftUI/VBoxContainer"]
layout_mode = 2

[node name="FileDialog" type="FileDialog" parent="Camera2D/CanvasLayer/TeleportAuthorUI"]
title = "Open a File"
initial_position = 2
size = Vector2i(975, 460)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png, *.jpg, *.jpeg")

[node name="Container" type="MarginContainer" parent="Camera2D/CanvasLayer/TeleportAuthorUI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -124.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Switch" type="Button" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "EVENTS"

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AddNode" type="Button" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer/VBoxContainer" groups=["TeleportAuthorButtons"]]
custom_minimum_size = Vector2(100, 32.39)
layout_mode = 2
text = "ADD NODE"

[node name="DeleteNode" type="Button" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer/VBoxContainer" groups=["TeleportAuthorButtons"]]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "DELETE NODE"

[node name="AddObject" type="Button" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer/VBoxContainer" groups=["EventAuthorButtons"]]
custom_minimum_size = Vector2(100, 32.39)
layout_mode = 2
text = "ADD OBJECT"

[node name="DeleteObject" type="Button" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer/VBoxContainer" groups=["EventAuthorButtons"]]
custom_minimum_size = Vector2(100, 32.39)
layout_mode = 2
text = "DELETE OBJECT"

[node name="EditConnections" type="Button" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer" groups=["TeleportAuthorButtons"]]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "EDIT
CONNECTIONS"

[node name="EnterNode" type="Button" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer" groups=["TeleportAuthorButtons"]]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "ENTER NODE"

[node name="Legend" type="VBoxContainer" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer/Legend"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer/Legend/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer/Legend/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
color = Color(1, 1, 1, 0.588235)

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer/Legend/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
text = "INACTIVE"

[node name="HBoxContainer2" type="HBoxContainer" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer/Legend"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer/Legend/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer/Legend/HBoxContainer2/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
color = Color(1, 0, 0, 1)

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer/Legend/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
text = "NO TELEPORTER SET"

[node name="HBoxContainer3" type="HBoxContainer" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer/Legend"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer/Legend/HBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect2" type="ColorRect" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer/Legend/HBoxContainer3/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
color = Color(0, 0, 1, 1)

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer/Legend/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
text = "TELEPORTER SET"

[node name="Export" type="Button" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer" groups=["CommonButtons"]]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "EXPORT"

[node name="Save" type="Button" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer" groups=["CommonButtons"]]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "SAVE"

[node name="Load" type="Button" parent="Camera2D/CanvasLayer/TeleportAuthorUI/Container/HBoxContainer" groups=["CommonButtons"]]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "LOAD"

[node name="EventFlagsUI" type="ColorRect" parent="Camera2D/CanvasLayer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)
script = ExtResource("8_ebub3")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="EventFlagsButton" type="Button" parent="Camera2D/CanvasLayer/EventFlagsUI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.241
anchor_bottom = 0.153
offset_left = 890.0
offset_top = 47.0
offset_right = 914.52
offset_bottom = -32.16
text = "EVENT FLAGS"

[node name="MarginContainer" type="MarginContainer" parent="Camera2D/CanvasLayer/EventFlagsUI"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.34325
anchor_top = 0.108
anchor_right = 0.649719
anchor_bottom = 0.897
offset_left = -0.360001
offset_top = 0.239998
offset_right = 0.359985
offset_bottom = 0.159973
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer/EventFlagsUI/MarginContainer"]
modulate = Color(0.231373, 0.231373, 0.231373, 1)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Camera2D/CanvasLayer/EventFlagsUI/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer/EventFlagsUI/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer/EventFlagsUI/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="TextEdit" type="TextEdit" parent="Camera2D/CanvasLayer/EventFlagsUI/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Add trigger"

[node name="Button" type="Button" parent="Camera2D/CanvasLayer/EventFlagsUI/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
text = "ADD"

[node name="HSeparator" type="HSeparator" parent="Camera2D/CanvasLayer/EventFlagsUI/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TriggerNames" type="VBoxContainer" parent="Camera2D/CanvasLayer/EventFlagsUI/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[editable path="NodeViewer/Bubble/Camera3D/TeleporterIndicatorAnchor/TeleporterIndicator"]
